--- a/test.ipynb
+++ b/test.ipynb
@@ -9,12 +9,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([0, 0, 0, 1, 1, 1, 2, 2, 2, 3, 3, 3, 4, 4, 4]),\n",
+       " array([0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2]))"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import math\n",
+    "import numpy as np\n",
+    "\n",
+    "a = [[10]*3 for i in range(5)]\n",
+    "a = np.array(a)\n",
+    "position = np.where(a == 10)\n",
+    "position"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import math\n",
-    "import numpy as np"
+    "import collections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "defaultdict(<class 'list'>, {})\n"
+     ]
+    }
+   ],
+   "source": [
+    "ms = [1,2,3,5,7,4]\n",
+    "info_ma = collections.defaultdict(list)\n"
    ]
   }
  ],
