--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        " array([0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2]))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -27,6 +27,7 @@
    "source": [
     "import math\n",
     "import numpy as np\n",
+    "import datetime\n",
     "\n",
     "a = [[10]*3 for i in range(5)]\n",
     "a = np.array(a)\n",
@@ -59,6 +60,71 @@
    "source": [
     "ms = [1,2,3,5,7,4]\n",
     "info_ma = collections.defaultdict(list)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "choiceList = list(range(10))\n",
+    "choiceList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 [[[1, 1, 10], [2, 1, 11]], [[3, 1, 12]], [[2, 1, 13]]]\n",
+      "1 [[[3, 1, 14], [1, 1, 15], [2, 1, 16]], [[2, 1, 17], [3, 1, 18]], [[3, 1, 19]]]\n",
+      "2 [[[1, 1, 1], [2, 1, 2]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "process_infor = [[[[1, 1, 10], [2, 1, 11]], [[3, 1, 12]], [[2, 1, 13]]],\n",
+    "                            [[[3,1,14], [1,1,15], [2,1,16]], [[2,1,17], [3,1,18]], [[3,1,19]]],\n",
+    "                            [[[1,1,1],[2,1,2]]]]\n",
+    "for job_index, job in enumerate(process_infor):\n",
+    "    print(job_index, job)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "datetime.datetime(2022, 10, 23, 10, 8, 55, 801939)"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "start_time = datetime.datetime.now()\n",
+    "start_time"
    ]
   }
  ],
