you are on your own
2022/10/23

--- a/test.ipynb
+++ b/test.ipynb
@@ -126,6 +126,28 @@
     "start_time = datetime.datetime.now()\n",
     "start_time"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[[10, 20], [30, 40]], 0, 0, 0, 0, 0, 0, 0, 0, 0]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "machine_occupation = [0 for _ in range(10)]\n",
+    "machine_occupation[0] = [[10,20], [30,40]]\n",
+    "machine_occupation"
+   ]
   }
  ],
  "metadata": {
