--- a/modified.ipynb
+++ b/modified.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,14 +15,28 @@
     "import random \n",
     "import collections\n",
     "import copy \n",
-    "import math"
+    "import math\n",
+    "from operator import itemgetter\n",
+    "import plotly.figure_factory as ff"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Flask' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/Users/molin/Desktop/潍柴/2022:10/improved_scheduling/modified.ipynb Cell 2\u001b[0m in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/molin/Desktop/%E6%BD%8D%E6%9F%B4/2022%3A10/improved_scheduling/modified.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m info_pr \u001b[39m=\u001b[39m {\u001b[39m'\u001b[39m\u001b[39mprocess_info\u001b[39m\u001b[39m'\u001b[39m: [[[[\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m10\u001b[39m], [\u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m11\u001b[39m]], [[\u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m12\u001b[39m]], [[\u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m13\u001b[39m]]],\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/molin/Desktop/%E6%BD%8D%E6%9F%B4/2022%3A10/improved_scheduling/modified.ipynb#W1sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m                             [[[\u001b[39m3\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m14\u001b[39m], [\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m15\u001b[39m], [\u001b[39m2\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m16\u001b[39m]], [[\u001b[39m2\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m17\u001b[39m], [\u001b[39m3\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m18\u001b[39m]], [[\u001b[39m3\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m19\u001b[39m]]],\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/molin/Desktop/%E6%BD%8D%E6%9F%B4/2022%3A10/improved_scheduling/modified.ipynb#W1sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m                             [[[\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m],[\u001b[39m2\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m2\u001b[39m]]]],\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/molin/Desktop/%E6%BD%8D%E6%9F%B4/2022%3A10/improved_scheduling/modified.ipynb#W1sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m            \u001b[39m'\u001b[39m\u001b[39mmachine_dict\u001b[39m\u001b[39m'\u001b[39m:{\u001b[39m1\u001b[39m:\u001b[39m'\u001b[39m\u001b[39mmachine 1\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m2\u001b[39m:\u001b[39m'\u001b[39m\u001b[39mmachine 2\u001b[39m\u001b[39m'\u001b[39m,\u001b[39m3\u001b[39m:\u001b[39m'\u001b[39m\u001b[39mmachine 3\u001b[39m\u001b[39m'\u001b[39m}\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/molin/Desktop/%E6%BD%8D%E6%9F%B4/2022%3A10/improved_scheduling/modified.ipynb#W1sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m            }\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/molin/Desktop/%E6%BD%8D%E6%9F%B4/2022%3A10/improved_scheduling/modified.ipynb#W1sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m app \u001b[39m=\u001b[39m Flask(\u001b[39m__name__\u001b[39m)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Flask' is not defined"
+     ]
+    }
+   ],
    "source": [
     "info_pr = {'process_info': [[[[1, 1, 10], [2, 1, 11]], [[3, 1, 12]], [[2, 1, 13]]],\n",
     "                            [[[3,1,14], [1,1,15], [2,1,16]], [[2,1,17], [3,1,18]], [[3,1,19]]],\n",
@@ -38,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +67,7 @@
     "        {\n",
     "            'orderID': '002',\n",
     "            'productID': '12M26机体',\n",
-    "            'productNB': 1\n",
+    "            'productNB': 2\n",
     "        },\n",
     "        {\n",
     "            'orderID': '003',\n",
@@ -145,7 +159,7 @@
     "    \"stuff\": ['Jack', 'Tom', 'Mary', 'Lily', 'Bob', 'Alice', 'David', 'Eve', 'Frank', 'Grace', 'Helen', 'Ivan', 'John', 'Kevin', 'Lucy', 'Mike', 'Nancy', 'Oscar', 'Peter', 'Queen', 'Robin', 'Steve', 'Tony', 'Uma', 'Victor', 'Wendy', 'Xavier', 'Yvonne', 'Zoe'], ##! 当前排产周期的员工列表\n",
     "    \"machineAval\": [0, 0, 0, 0, 0, 0, 0], ##! 当前排产周期的设备可用时间\n",
     "    \"machineNotAvalPeriod\": { ##! 当前排产周期的设备不可用时间段\n",
-    "        'MC6000-6': [['2022-11-01 19:00:00', '2022-11-02 08:00:00'], ['2022-11-02 19:00:00', '2022-11-03 08:00:00']], ##! 夜班不可用\n",
+    "        'MC6000-6': [['2022-11-01 01:00:00', '2022-11-02 08:00:00'], ['2022-11-02 19:00:00', '2022-11-03 08:00:00']], ##! 夜班不可用\n",
     "        'MC6000-7': [['2022-11-01 19:00:00', '2022-11-02 08:00:00'], ['2022-11-02 19:00:00', '2022-11-03 08:00:00']],\n",
     "        '德玛吉五轴': [],\n",
     "        '乌尼恩-1#': [],\n",
@@ -159,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,16 +245,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n",
+      "5\n",
       "{1: 'MC6000-6', 2: 'MC6000-7', 3: '德玛吉五轴', 4: '乌尼恩-1#', 5: '英赛-1#', 6: 'BW', 7: '南MTM清洗机'}\n",
-      "16\n"
+      "20\n",
+      "[[[60, 1920], [2580, 3360]], [[1140, 1920], [2580, 3360]], [], [], [], [], [[720, 1080]]]\n"
      ]
     }
    ],
@@ -248,38 +263,21 @@
     "res = info_pr_with_json(required_data)\n",
     "print(res['job_nb'])\n",
     "print(res['machine_dict'])\n",
-    "print(res['total_op_nb'])\n"
+    "print(res['total_op_nb'])\n",
+    "print(res['machineNotAvalPeriod'])\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{(1, 1): 1,\n",
-       " (1, 2): 2,\n",
-       " (1, 3): 3,\n",
-       " (1, 4): 4,\n",
-       " (2, 1): 5,\n",
-       " (2, 2): 6,\n",
-       " (2, 3): 7,\n",
-       " (2, 4): 8,\n",
-       " (3, 1): 9,\n",
-       " (3, 2): 10,\n",
-       " (3, 3): 11,\n",
-       " (3, 4): 12,\n",
-       " (4, 1): 13,\n",
-       " (4, 2): 14,\n",
-       " (4, 3): 15,\n",
-       " (4, 4): 16}"
-      ]
-     },
-     "execution_count": 104,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{(1, 1, 2): 20, (1, 2, 2): 35, (1, 3, 2): 30, (1, 4, 2): 30, (2, 1, 1): 50, (2, 2, 2): 75, (2, 3, 1): 60, (2, 4, 1): 30, (3, 1, 1): 50, (3, 2, 2): 75, (3, 3, 1): 60, (3, 4, 1): 30, (4, 1, 3): 276, (4, 1, 4): 276, (4, 2, 3): 360, (4, 2, 5): 360, (4, 3, 3): 276, (4, 3, 5): 276, (4, 3, 6): 300, (4, 4, 7): 252, (5, 1, 3): 276, (5, 1, 4): 276, (5, 2, 3): 360, (5, 2, 5): 360, (5, 3, 3): 276, (5, 3, 5): 276, (5, 3, 6): 300, (5, 4, 7): 252}\n"
+     ]
     }
    ],
    "source": [
@@ -303,32 +301,36 @@
     "    for j in OPERATION[i]:\n",
     "        INDEX_DIC[(i,j)] = lengh + OPERATION[i].index(j) + 1\n",
     "    lengh += len(OPERATION[i])\n",
-    "\n"
+    "\n",
+    "print(PT)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1, 2, 3, 4, 5, 6, 13, 14, 7, 8, 9, 10, 15, 11, 12, 16]\n",
-      "[1, 2, 3, 4, 1, 2, 1, 2, 3, 4, 1, 2, 3, 3, 4, 4]\n"
+      "[[   0   35   85  130 1920 1985 2075 2150 1985 2075 2195 2270    0  291\n",
+      "   666 1080    0  666 1041 1347]\n",
+      " [  20   70  115  160 1970 2060 2135 2180 2035 2150 2255 2300  276  651\n",
+      "   966 1332  276 1026 1317 1599]]\n"
      ]
     }
    ],
    "source": [
-    "OS = [1,1,1,1,2,2,4,4,2,2,3,3,4,3,3,4]\n",
-    "MA = [2,2,2,2,1,2,2,2,3,3,6,7,4,3,5,7]\n",
+    "OS = [1,1,5,1,1,2,2,4,4,5,5,2,2,3,3,4,3,3,4,5]\n",
+    "MA = [2,2,2,2,1,2,1,1,1,2,1,1,3,3,6,7,4,3,5,7]\n",
     "machine_num = res['machine_nb']\n",
+    "nonProcessingTime = res['nonProcessingTime']\n",
     "\n",
-    "def get_OS_index():\n",
+    "def get_OS_index(OS):\n",
     "    OS_copy = OS.copy()\n",
-    "    OS_index = [] ##! OS中各工序对应在MA中的位置\n",
-    "    OS_index_PT = [] ##! OS中各工序对应该产品的第几道工序\n",
+    "    OS_index = [] ##! OS中各工序对应在MA中的位置, 从1开始\n",
+    "    OS_index_PT = [] ##! OS中各工序对应该产品的第几道工序，PT:product\n",
     "    L = len(OS)\n",
     "    for i in range(L):\n",
     "        count = collections.Counter(OS_copy)\n",
@@ -337,48 +339,123 @@
     "        OS_index_PT.append(OPERATION[OS[i]][operation_index])\n",
     "        OS_copy.pop(0)\n",
     "    return OS_index, OS_index_PT\n",
-    "\n"
+    "\n",
+    "def find_available_gap(notAvalPeriod, pt, nonProcessingTime, last_op_end_time):\n",
+    "    ##! notAvalPeriod: 机器不可用时间段\n",
+    "    ##! pt: 工序加工时间\n",
+    "    ##! nonProcessingTime: 机器间隔时间\n",
+    "    ##! last_op_end_time: 上道工序结束时间\n",
+    "    ##! 返回值：可用时间段的起始时间\n",
+    "    possible_start_time = []\n",
+    "    time_list = notAvalPeriod.copy()\n",
+    "    time_list.sort() ##! 按时间先后排序\n",
+    "    time_list.insert(0, [0,0])\n",
+    "    for i in range(len(time_list)-1):\n",
+    "        gap = time_list[i+1][0] - max(time_list[i][1], last_op_end_time)\n",
+    "        if gap >= pt + nonProcessingTime:\n",
+    "            if last_op_end_time == 0:\n",
+    "                possible_start_time.append(time_list[i][1])\n",
+    "            else:\n",
+    "                possible_start_time.append(max(time_list[i][1], last_op_end_time + nonProcessingTime))\n",
+    "    if possible_start_time == []:\n",
+    "        if last_op_end_time == 0:\n",
+    "            possible_start_time.append(time_list[-1][1])\n",
+    "        else:\n",
+    "            possible_start_time.append(max(time_list[-1][1], last_op_end_time + nonProcessingTime))\n",
+    "    return possible_start_time\n",
+    "\n",
+    "def decode(OS_chrom, MA_chrom):\n",
+    "    L = len(OS_chrom)\n",
+    "    schedule = np.zeros((2, L), dtype=int)\n",
+    "    machineNotAvalPeriod = res['machineNotAvalPeriod']\n",
+    "    updated_machineNotAvalPeriod = copy.deepcopy(machineNotAvalPeriod)\n",
+    "    OS_index, OS_index_PT = get_OS_index(OS_chrom)\n",
+    "    for i in range(L):\n",
+    "        current_product = OS_chrom[i]\n",
+    "        current_machine = MA_chrom[OS_index[i]-1] ##! 从1开始\n",
+    "        if OS_index_PT[i] == 1:\n",
+    "            last_op_end_time = 0\n",
+    "        else:\n",
+    "            last_op_end_time = schedule[1][OS_index[i]-2]\n",
+    "        schedule[0][OS_index[i]-1] = find_available_gap(updated_machineNotAvalPeriod[current_machine-1], \\\n",
+    "        PT[(current_product, OS_index_PT[i], current_machine)], nonProcessingTime, last_op_end_time)[0]\n",
+    "        schedule[1][OS_index[i]-1] = schedule[0][OS_index[i]-1] + PT[(current_product, OS_index_PT[i], current_machine)]\n",
+    "        ## 更新机器不可用时间段\n",
+    "        updated_machineNotAvalPeriod[current_machine-1].append([schedule[1][OS_index[i]-1], schedule[1][OS_index[i]-1] + nonProcessingTime])\n",
+    "    return schedule\n",
+    "\n",
+    "print(decode(OS, MA))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def gannt():\n",
+    "    scheduling = decode(OS,MA)\n",
+    "    X_ijk = {}\n",
+    "    ST_ij = {}\n",
+    "    CT_ij = {}\n",
+    "    for i in JOB:\n",
+    "        for j in OPERATION[i]:\n",
+    "            for k in MACHINE[(i,j)]:\n",
+    "                if k == MA[INDEX_DIC[(i,j)]-1]:\n",
+    "                    X_ijk[(i,j,k)] = 1\n",
+    "                else:\n",
+    "                    X_ijk[(i,j,k)] = 0\n",
+    "    for i in JOB:\n",
+    "        for j in OPERATION[i]:\n",
+    "            ST_ij[(i,j)] = scheduling[0][INDEX_DIC[(i,j)]-1]\n",
+    "            CT_ij[(i,j)] = scheduling[1][INDEX_DIC[(i,j)]-1]\n",
+    "    index_record = []\n",
+    "    job_record = {}\n",
+    "    SolutionDict = {}\n",
+    "    for i in JOB:\n",
+    "        for j in OPERATION[i]:\n",
+    "            for m in MACHINE[(i,j)]:\n",
+    "                Keyname_X = '_(' + str(i) + ',_'+str(j) + ',_' + str(m) + ')'\n",
+    "                SolutionDict[Keyname_X] = [X_ijk[(i,j,m)], ST_ij[(i,j)], CT_ij[(i,j)]]\n",
+    "                if SolutionDict[Keyname_X][0] == 1:\n",
+    "                    initial_time = datetime.datetime.strptime(\"2022-11-01 00:00:00\", \"%Y-%m-%d %H:%M:%S\")\n",
+    "                    start_time = initial_time + datetime.timedelta(minutes=SolutionDict[Keyname_X][1].astype(np.float64))\n",
+    "                    end_time = initial_time + datetime.timedelta(minutes=SolutionDict[Keyname_X][2].astype(np.float64))\n",
+    "                    processing_time = CT_ij[(i,j)] - ST_ij[(i,j)]\n",
+    "                    job_record[(i,j,m)] = [start_time,end_time,processing_time]\n",
+    "                    index_record.append([i,j,m])\n",
+    "    index_record.sort(key=itemgetter(2))\n",
+    "    df1 = []\n",
+    "    colors = {}\n",
+    "    for i in index_record:\n",
+    "        df1.append(dict(Task='Machine %s' % (i[2]), Start='%s' % (str(job_record[(i[0],i[1],i[2])][0])),\\\n",
+    "            Finish='%s' % (str(job_record[(i[0],i[1],i[2])][1])),\\\n",
+    "                Resource='Job %s' % (i[0])))\n",
+    "    for i in JOB:\n",
+    "        color_list = [random.randint(0,255),random.randint(0,255),random.randint(0,255)]\n",
+    "        colors['Job %s' % i] = '#%02X%02X%02X' % (color_list[0],color_list[1],color_list[2])\n",
+    "    fig1 = ff.create_gantt(df1, index_col='Resource', colors=colors, show_colorbar=True, group_tasks=True, showgrid_x=True,\\\n",
+    "        title='gannt chart')\n",
+    "    fig1.write_html('test' + '.html')\n",
+    "    print(\"gannt chart finished\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "Counter({1: 4, 2: 4, 4: 4, 3: 4})"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gannt chart finished\n"
+     ]
     }
    ],
    "source": [
-    "OS = [1,1,1,1,2,2,4,4,2,2,3,3,4,3,3,4]\n",
-    "MA = [2,2,2,2,1,2,2,2,3,3,6,7,4,3,5,7]\n",
-    "machine_num = res['machine_nb']\n",
-    "\n",
-    "# def get_OS_index():\n",
-    "#     OS_copy = OS.copy()\n",
-    "#     OS_index = [] ##! 给MA用\n",
-    "#     OS_index_PT = [] ##! 给PT用\n",
-    "#     L = len(OS)\n",
-    "#     for i in range(L):\n",
-    "#         count = collections.Counter(OS_copy)\n",
-    "    \n",
-    "count = collections.Counter(OS)\n",
-    "count"
+    "gannt = gannt()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
