you are on your own，kid
针对排产部分：
设备不可用时间
人员需求清单

更新后的排产算法

--- a/test.ipynb
+++ b/test.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -19,7 +19,7 @@
        " array([0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2, 0, 1, 2]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,6 +147,106 @@
     "machine_occupation = [0 for _ in range(10)]\n",
     "machine_occupation[0] = [[10,20], [30,40]]\n",
     "machine_occupation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p = [0.3, 0.4, 0.2, 0.1]\n",
+    "selected = np.random.choice(np.arange(4), size = 3, replace=True, p=p)\n",
+    "selected\n",
+    "len(np.array(p))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s =  datetime.timedelta(days=20)\n",
+    "date2str = (datetime.datetime.now() + s).strftime('%Y-%m-%d %H:%M:%S')\n",
+    "def compare_two_datetime(date1, date2):\n",
+    "    if date1 > date2:\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "date1 = datetime.datetime.now()\n",
+    "date2 = datetime.datetime.now() + datetime.timedelta(days=20)\n",
+    "compare_two_datetime(date1, date2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('2022-11-01', 'dayShift'),\n",
+       " ('2022-11-01', 'nightShift'),\n",
+       " ('2022-11-02', 'dayShift'),\n",
+       " ('2022-11-02', 'nightShift'),\n",
+       " ('2022-11-03', 'dayShift'),\n",
+       " ('2022-11-03', 'nightShift')]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "shift_list = [('2022-11-03', 'dayShift'), ('2022-11-01', 'dayShift'), ('2022-11-02', 'dayShift'), ('2022-11-03', 'nightShift'), ('2022-11-01', 'nightShift'), ('2022-11-02', 'nightShift')]\n",
+    "shift_list.sort(key=lambda x: x[0])\n",
+    "shift_list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'(1, 2)'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "aDict = {(1,2): 1, (2,3): 2}\n",
+    "str((1,2))"
    ]
   }
  ],
