排产优化项
2022/11/06

--- a/test.ipynb
+++ b/test.ipynb
@@ -248,6 +248,52 @@
     "aDict = {(1,2): 1, (2,3): 2}\n",
     "str((1,2))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2022-10-01-day-shift'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "day = '2022-10-01'\n",
+    "shift = 'day-shift'\n",
+    "day + '-' + shift "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': {1: 2, 2: 3}}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "total_plan = dict()\n",
+    "total_plan['a'] = {}\n",
+    "total_plan['a'][1] =2\n",
+    "total_plan['a'][2] = 3\n",
+    "total_plan"
+   ]
   }
  ],
  "metadata": {
