--- a/test.ipynb
+++ b/test.ipynb
@@ -273,26 +273,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'a': {1: 2, 2: 3}}"
+       "1"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "total_plan = dict()\n",
-    "total_plan['a'] = {}\n",
-    "total_plan['a'][1] =2\n",
-    "total_plan['a'][2] = 3\n",
-    "total_plan"
+    "a = (1,2)\n",
+    "a[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "[[9 0 1 2]\n",
+      " [2 6 5 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.random.randint(0, 10, size=(2, 4))\n",
+    "print(np.max(a[1]))\n",
+    "print(a)\n",
+    "\n",
+    "b = [1,2,3]\n",
+    "average = sum(b)/len(b)"
    ]
   }
  ],
